--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <header class="header">
             <meta charset="utf-8">
             <title>Accueil Booki</title>
-            <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
             <link href="css/style.css" rel="stylesheet">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,41 +36,47 @@
                         </div>
                         <form method="get" action="" class="champ_recherche_ville">
                             <p>
-                                <input type="text" placeholder="Marseille,France">
+                                <input type="text" id="lieu" placeholder="Marseille,France">
                             </p>
                         </form>
                         <button class="bouton_recherche">
-                            Rechercher
+                            <b>Rechercher</b>
                         </button>
                     </div>
                     <div class="container_filtres">
-                        <h2 class="titre_filtres">
+                        <h2>
                             Filtres
                         </h2>
-                        <button class="bouton_econom">
-                            Économique
-                        </button>
-                        <button class="bouton_familial">
-                            Familial
-                        </button>
-                        <button class="bouton romantique">
-                            Romantique
-                        </button>
-                        <button class="bouton_animaux">
-                            Animaux autorisés
-                        </button>
+                        <div class="boutons_filtre">
+                            <button class="bouton_econom">
+                                <i class="fa-solid fa-money-bill-wave"></i>
+                                <p>Économique</p>
+                            </button>
+                            <button class="bouton_familial">
+                                <i class="fa-solid fa-person"></i>
+                                <p>Familial</p>
+                            </button>
+                            <button class="bouton romantique">
+                                <i class="fa-solid fa-heart"></i>
+                                <p>Romantique</p>
+                            </button>
+                            <button class="bouton_animaux">
+                                <i class="fa-solid fa-dog"></i>
+                                <p>Animaux autorisés</p>
+                            </button>
+                        </div>
                     </div>
                     <div class="container_info_sup">
                         <div class="logo_info">
         
                         </div>
-                        <p>Plus de "nombrelogements" logements sont disponible dans cette ville</p>
+                        <p>Plus de 500 logements sont disponible dans cette ville</p>
                     </div>
                 </div>
             </section>
             <section id="section_articles_hebergements">
                 <h2 id="ancre_hebergements">
-                    Hébergements à "Nom_ville"
+                    Hébergements à Marseille
                 </h2>
                 <article>
                     <div id="article1">
