--- a/index.html
+++ b/index.html
@@ -258,38 +258,42 @@
             </section>
             <section id="section_activités">
                 <h2 id="ancre_activites">
-                    Activités à "Nom_ville"
+                    Activités à Marseille
                 </h2>
                 <div class="container_activites">
                     <article id="activite1">
-                        <div class="card">
-                            <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="" style="width:30%">
-                            <div class="container">
-                              <h3><b>Vieux-Port</b></h3>
+                        <div class="card_activ">
+                            <a href="#"></a>
+                            <img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux-Port">
+                            <div class="container_text_activ">
+                              <h3>Vieux-Port</h3>
                             </div>
                         </div> 
                     </article>
                     <article id="activite2">
-                        <div class="card">
-                            <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="" style="width:30%">
-                            <div class="container">
-                                <h3><b>Fort de Pomègues</b></h3>
+                        <div class="card_activ">
+                            <a href="#"></a>
+                            <img src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
+                            <div class="container_text_activ">
+                                <h3>Fort de Pomègues</h3>
                             </div>
                         </div>
                     </article>
                     <article id="activite3">
-                        <div class="card">
-                            <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="" style="width:30%">
-                            <div class="container">
-                              <h3><b>Parc national des Calanques</b></h3>
+                        <div class="card_activ">
+                            <a href="#"></a>
+                            <img src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc national des Calanques">
+                            <div class="container_text_activ">
+                              <h3>Parc national des Calanques</h3>
                             </div>
                         </div>
                     </article>
                     <article id="activite4">
-                        <div class="card">
-                            <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="" style="width:30%">
-                            <div class="container">
-                              <h3><b>Notre-Dame-de-la-Garde</b></h3>
+                        <div class="card_activ">
+                            <a href="#"></a>
+                            <img src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
+                            <div class="container_text_activ">
+                              <h3>Notre-Dame-de-la-Garde</h3>
                             </div>
                           </div>
                     </article>
@@ -297,7 +301,7 @@
             </section>
         </main>
         <footer class="container_footer">
-            <div id="bloc_propos">
+            <div class="bloc_footer">
                 <h2>
                     À propos
                 </h2>
@@ -312,7 +316,7 @@
                     Données et confidentialité
                 </button>
             </div>
-            <div id="bloc_noshebergements">
+            <div class="bloc_footer">
                 <h2>
                     Nos hébergements
                 </h2>
@@ -323,7 +327,7 @@
                     Proposer votre hôtel
                 </button>
             </div>
-            <div id="bloc_assistance">
+            <div class="bloc_footer">
                 <h2>
                     Assistance
                 </h2>
