--- a/index.html
+++ b/index.html
@@ -206,16 +206,18 @@
                             <div class="card_pop">
                                 <a href="#"></a>
                                 <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin" >
-                                <div class="container_article_pop_text">
-                                  <h3>Hôtel Le soleil du matin</h3>
-                                  <p>Nuit à partir de 128€</p>
-                                  <div>
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fas fa-star fa-sm"></i>
-                                  </div>
+                                <div class="container_article_pop_description">
+                                    <div class="container_article_pop_text">
+                                        <h3>Hôtel Le soleil du matin</h3>
+                                        <p>Nuit à partir de 128€</p>
+                                    </div>
+                                    <div class="notation_stars">
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fas fa-star fa-sm"></i>
+                                    </div>
                                 </div>
                             </div>
                         </article>
@@ -223,16 +225,18 @@
                             <div class="card_pop">
                                 <a href="#"></a>
                                 <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambres d'hôtes Au coeur de l'eau" >
-                                <div class="container_article_pop_text">
-                                  <h3>Chambres d'hôtes Au coeur de l'eau</h3>
-                                  <p>Nuit à partir de 71€</p>
-                                  <div>
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fas fa-star fa-sm"></i>
-                                  </div>
+                                <div class="container_article_pop_description">
+                                    <div class="container_article_pop_text">
+                                        <h3>Chambres d'hôtes Au coeur de l'eau</h3>
+                                        <p>Nuit à partir de 71€</p>
+                                    </div>
+                                    <div class="notation_stars">
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fas fa-star fa-sm"></i>
+                                    </div>
                                 </div>
                             </div>
                         </article>
@@ -240,16 +244,18 @@
                             <div class="card_pop">
                                 <a href="#"></a>
                                 <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Bleu et Blanc" >
-                                <div class="container_article_pop_text">
-                                  <h3>Hôtel Bleu et Blanc</h3>
-                                  <p>Nuit à partir de 68€</p>
-                                  <div>
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fas fa-star fa-sm"></i>
-                                  </div>
+                                <div class="container_article_pop_description">
+                                    <div class="container_article_pop_text">
+                                        <h3>Hôtel Bleu et Blanc</h3>
+                                        <p>Nuit à partir de 68€</p>
+                                    </div>
+                                    <div class="notation_stars">
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fas fa-star fa-sm"></i>
+                                    </div>
                                 </div>
                             </div>
                         </article>
