--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr" class="page">
+<html lang="fr" class="page"> <!-- Classe pour pouvoir définir la largeur maximum et la marge de la page entière-->
     <meta charset="utf-8">
     <title>Accueil Booki</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
@@ -8,48 +8,48 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://kit.fontawesome.com/3b4ed1cf53.js" crossorigin="anonymous"></script>
     <body>
-        <header class="header">
-            <div class="logo_booki">
-                <img src="images/logo/Booki.png" alt="Logo Booki"/>
+        <header class="header"> <!-- Bloc header pour définir les propriétes css nécessaires concercnant le logo et le bloc navigation-->
+            <div class="logo_booki"> <!-- bloc logo pour le positionnement-->
+                <img src="images/logo/Booki.png" alt="Logo Booki">
             </div>
-            <nav class="bloc_nav">
+            <nav class="bloc_nav"> <!-- bloc navigation pour le positionnement par rapport au logo-->
                 <ul>
-                    <li class="liste_nav">
-                        <div class="liens_nav">
-                            <a href="#ancre_hebergements">Hébergements</a>
+                    <li class="liste_nav"> <!-- bloc intérieur navigation pour le positionnement des éléments intérieurs-->
+                        <div class="liens_nav"> <!-- classe pour appliquer différents effets -->
+                            <a href="#ancre_hebergements">Hébergements</a> <!-- Lien vers l'ancre Hebergement-->
                         </div>
-                        <div class="liens_nav">
-                            <a href="#ancre_activites">Activités</a>
+                        <div class="liens_nav"> <!-- -->
+                            <a href="#ancre_activites">Activités</a> <!-- Lien vers l'ancre Activité -->
                         </div>
                     </li>
                 </ul>
             </nav>
         </header>
         <main>
-            <section id="outils_recherche">
+            <section id="outils_recherche"> <!-- L'id me sert de repère pour m'indiquer de quelle section il s'agit -->
                 <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
                 <p>En plein centre-ville ou en pleine nature</p>
-                <div class="container_outils_recherche">
-                    <div class="container_barre_recherche">
-                        <div class="bouton_geoloc">
-                            <i class="fa-solid fa-location-dot"></i>
+                <div class="container_outils_recherche"> <!-- Bloc pour les différents outils; Barre de recherche avec champ de saisie, Filtres + infos supplémentaires -->
+                    <div class="container_barre_recherche"> <!-- Bloc contentant les différents éléments de la barre de recherche ( icone de geolocalisation,champ de saisie, bouton de recherche). La saisie est faisable mais la recherche n'est pas fonctionnelle pour cette 1ere version -->
+                        <div class="bouton_geoloc"> <!-- Bloc contenant l'icone geolocalisation -->
+                            <i class="fa-solid fa-location-dot"></i> <!-- L'icone geolocalisation -->
                         </div>
-                        <form method="get" action="" class="champ_recherche_ville">
+                        <form method="get" class="champ_recherche_ville"> <!-- Champ de rechercher de la ville-->
                             <p>
                                 <input type="text" id="lieu" placeholder="Marseille,France">
                             </p>
                         </form>
-                        <button class="bouton_recherche">
-                            <i class="fa-solid fa-magnifying-glass"></i>
+                        <button class="bouton_recherche"> <!-- Bouton de recherche de la barre-->
+                            <i class="fa-solid fa-magnifying-glass"></i> <!-- l'îcone s'affiche à la place du texte en affichage Mobile, n'apparait pas sur les écrans + large -->
                             <b>Rechercher</b>
                         </button>
                     </div>
-                    <div class="container_filtres">
+                    <div class="container_filtres"> <!--Bloc Filtres contenant le titre, et les boutons de filtres par type -->
                         <h2>
                             Filtres
                         </h2>
-                        <div class="boutons_filtre">
-                            <div class="bouton_filtre">
+                        <div class="boutons_filtre"> <!-- Bloc contenant les 4 boutons de filtres, pour régler le positionnement des éléments contenus. -->
+                            <div class="bouton_filtre"> <!--Classe pour tout mes boutons de filtres, contenant l'icone et le titre-->
                                 <i class="fa-solid fa-money-bill-wave fa-lg"></i>
                                 <p>Économique</p>
                             </div>
@@ -67,31 +67,31 @@
                             </div>
                         </div>
                     </div>
-                    <div class="container_info_sup">
+                    <div class="container_info_sup"> <!-- Bloc infos supplémentaire contenant l'icone + le texte associé, notamment le nombre de résultats disponible selon la ville recherchée -->
                         <i class="fa-solid fa-circle-info"></i>
                         <p>Plus de 500 logements sont disponible dans cette ville</p>
                     </div>
                 </div>
             </section>
-            <section class="section_articles_hebergements">
-                <div class="section_hebergements_ville">
-                    <h2 id="ancre_hebergements">
+            <section class="section_articles_hebergements"> <!-- Bloc contenant toute la section concernant les hébergements par ville et par popularité-->
+                <div class="section_hebergements_ville"> <!-- Bloc contenant toute la section des hébergements par ville dont le titre-ancre Hébergements et les cartes de logements -->
+                    <h2 id="ancre_hebergements"><!--Ancre hébergements vers laquelle le lien de navigation du même nom redirige-->
                         Hébergements à Marseille
                     </h2>
-                    <div class="articles_hebergements_ville">
-                        <article id="article1">
-                            <div class="card">
-                                <a href="#"></a>
+                    <div class="articles_hebergements_ville"> <!-- Bloc contenant les cartes des hébergements selon la ville recherchée-->
+                        <article id="article1"> <!-- L'id me sert de repère pour savoir quel est l'article en question, pour gérer le positionnement-->
+                            <div class="card"> <!-- Classe Carte des hébergements par ville, chaque article sera constitué de cette carte qui définit l'agencement de chaque article. La carte est composée de l'image de l'hébergement, d'un texte descriptif et d'une notation en étoiles-->
+                                <a href="#"></a> <!--Technique pour que toute la carte soit cliquable et redirige vers la page de l'article en question. Vide puisqu'il s'agit de la 1ere version du site-->
                                 <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge La Canebière">
-                                <div class="container_card_article_text">
+                                <div class="container_card_article_text"> <!--Bloc contenant le titre + le texte descriptif de l'hébergement-->
                                   <h3>Auberge La Canebière</h3>
                                   <p>Nuit à partir de 25€</p>
                                   <div>
+                                    <i class="fa-solid fa-star fa-sm"></i> <!-- Icone d'étoile bleu signifiant 1 de valeur sur une note de 5, donc 5 icones. Cet icone là est répété 4 fois-->
                                     <i class="fa-solid fa-star fa-sm"></i>
                                     <i class="fa-solid fa-star fa-sm"></i>
                                     <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fas fa-star fa-sm"></i>
+                                    <i class="fas fa-star fa-sm"></i> <!-- Icone d'étoile grise signifiant 0 de valeur pour la note. Il y a 4 étoiles bleu + 1 grise pour une valeure de 4/5. Cet ensemble est réglé de façon illustrative pour cette 1ere version.-->
                                   </div>
                                 </div>
                             </div>
@@ -182,22 +182,22 @@
                             </div>
                         </article>
                     </div>
-                    <div class="bouton_afficher">
+                    <div class="bouton_afficher"> <!-- Bouton-texte "Afficher Plus" pour pouvoir agrandir le bloc contenant les résultats de recherche et augmenter le nombre de résultats affichés. Non fonctionnel pour cette version-->
                         <p>
                             <b>Afficher plus</b>
                         <p>
                     </div>
                 </div>
-                <div class="container_articles_populaires">
-                    <div class="container_h2_logo">
+                <div class="container_articles_populaires"> <!--Bloc contenant les cartes des hébergements les plus populaires-->
+                    <div class="container_h2_logo"> <!-- Titre situé avant les résultats accompagné d'un icone-->
                         <h2>
                             Les plus populaires
                         </h2>
                         <i class="fa-solid fa-chart-line"></i>
                     </div>
-                    <div class="articles_populaires">
-                        <article id="article1_populaire">
-                            <div class="card_pop">
+                    <div class="articles_populaires"> <!-- Bloc contenant uniquement les cartes d'hébergements populaires-->
+                        <article id="article1_populaire"> <!-- L'id me sert de repère-->
+                            <div class="card_pop"> <!-- Classe carte d"hébergements populaires. Classe différente de celle des hébergements par ville car nécessite des réglages diférents-->
                                 <a href="#"></a>
                                 <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin" >
                                 <div class="container_article_pop_description">
@@ -215,7 +215,7 @@
                                 </div>
                             </div>
                         </article>
-                        <article id="article2">
+                        <article id="article2_populaire">
                             <div class="card_pop">
                                 <a href="#"></a>
                                 <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambres d'hôtes Au coeur de l'eau" >
@@ -234,7 +234,7 @@
                                 </div>
                             </div>
                         </article>
-                        <article id="article3">
+                        <article id="article3_populaire">
                             <div class="card_pop">
                                 <a href="#"></a>
                                 <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Bleu et Blanc" >
@@ -256,13 +256,13 @@
                     </div>
                 </div>
             </section>
-            <section class="section_activités">
-                <h2 id="ancre_activites">
+            <section class="section_activités"> <!-- Bloc contenant toute la section des Activités, comprenant d'abord le titre-ancre "Activités" suivi du bloc contenant les cartes d'activités-->
+                <h2 id="ancre_activites"> <!-- Titre-ancre "Activités" vers lequel le bouton de navigation du même nom redirige-->
                     Activités à Marseille
                 </h2>
-                <div class="container_activites">
-                    <article id="activite1">
-                        <div class="card_activ">
+                <div class="container_activites"> <!-- Bloc contenant uniquement les cartes d'activités-->
+                    <article id="activite1"> <!--L'id sert de repère-->
+                        <div class="card_activ"> <!--Carte spécifique aux activités. La composition et les fonctionnalités sont similaire aux cartes précédentes excepté la description ne contenant que le titre, et pas de note.-->
                             <a href="#"></a>
                             <img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux-Port">
                             <div class="container_text_activ">
@@ -300,15 +300,15 @@
                 </div>
             </section>
         </main>
-        <footer class="container_footer">
-            <div class="bloc_footer">
+        <footer class="container_footer"> <!-- Bloc contenant tout le footer-->
+            <div class="bloc_footer"> <!-- Classe qui me sert de modèle pour les 3 parties ("A propos", "Nos hébergements" et "Assistance"). Le bloc est composé du titre suivi par les titres-liens de redirections. Ceux-ci sont non-fonctionnel pour cette version-->
                 <h2>
                     À propos
                 </h2>
-                <button class="bouton_fonctionnementsite">
+                <button class="bouton_fonctionnementsite"> <!-- Ici les classes me servent pour la disposition des éléments-->
                     Fonctionnement du site
                 </button>
-                <button class="bouton_conditionsgenerales">
+                <button class="bouton_conditionsgenerales"> 
                     Conditions générales
                 </button>
                 <button class="bouton_donneesconfidentialite">
