Ajout meta viewport pour corriger l'affichage mobile qui n'était pas pris en compte dans certains cas.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr" class="page"> 
     <!-- Classe pour pouvoir définir la largeur maximum et la marge de la page entière-->
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Accueil Booki</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
