Correction partielle version mobile: Header - section outils recherche - Articles populaires.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="container_outils_recherche"> <!-- Bloc pour les différents outils; Barre de recherche avec champ de saisie, Filtres + infos supplémentaires -->
                     <div class="container_barre_recherche"> <!-- Bloc contentant les différents éléments de la barre de recherche ( icone de geolocalisation,champ de saisie, bouton de recherche). La saisie est faisable mais la recherche n'est pas fonctionnelle pour cette 1ere version -->
                         <div class="bouton_geoloc"> <!-- Bloc contenant l'icone geolocalisation -->
-                            <i class="fa-solid fa-location-dot"></i> <!-- L'icone geolocalisation -->
+                            <i class="fa-solid fa-location-dot fa-lg"></i> <!-- L'icone geolocalisation -->
                         </div>
                         <form method="get" class="champ_recherche_ville"> <!-- Champ de rechercher de la ville-->
                             <p>
@@ -50,7 +50,7 @@
                             </p>
                         </form>
                         <button class="bouton_recherche"> <!-- Bouton de recherche de la barre-->
-                            <i class="fa-solid fa-magnifying-glass"></i> <!-- l'îcone s'affiche à la place du texte en affichage Mobile, n'apparait pas sur les écrans + large -->
+                            <i class="fa-solid fa-magnifying-glass fa-lg"></i> <!-- l'îcone s'affiche à la place du texte en affichage Mobile, n'apparait pas sur les écrans + large -->
                             <b>Rechercher</b>
                         </button>
                     </div>
